Fix some left-align regressions

--- a/_styles/testimonials.less
+++ b/_styles/testimonials.less
@@ -3,8 +3,10 @@
   .testimonial-quote {
     font-family: "IBM Plex Mono";
     margin: 1rem 0;
+    text-align: left;
   }
   .testimonial-name {
     margin: 0;
+    text-align: left;
   }
 }
